Salesforce CPQ/main/default/objects/QuoteDocument__c/QuoteDocument__c.object-meta.xml
<CustomObject>
    <customHelpPage>QuoteDocumentHelp</customHelpPage>
    <description>Particular version of a generated PDF document for the quote it&apos;s attached to. Ability to edit or delete this object should be taken away from all users (except administrators, of course) in order to preserve audit trail of all revisions.</description>
    <label>Quote Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>