Salesforce CPQ/main/default/objects/QuoteDocument__c/fields/ElectronicSignature__c.field-meta.xml
<CustomField>
    <fullName>ElectronicSignature__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this document was generated for electronic signature.</description>
    <inlineHelpText>Field for the document to be signed electronically.</inlineHelpText>
    <label>Electronic Signature</label>
    <type>Checkbox</type>
</CustomField>