Salesforce CPQ/main/default/objects/QuoteDocument__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>Key used to ensure unique combination of quote ID and version number.</description>
    <inlineHelpText>Key used to ensure unique combination of quote ID and version number.</inlineHelpText>
    <label>Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>