Salesforce CPQ/main/default/objects/QuoteDocument__c/fields/NetAmount__c.field-meta.xml
<CustomField>
    <fullName>NetAmount__c</fullName>
    <description>Net amount on the quote at the time this document was generated.</description>
    <inlineHelpText>Net amount on the quote at the time this document was generated.</inlineHelpText>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>