Salesforce CPQ/main/default/objects/QuoteDocument__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Opportunity that parents the Quote for this document. References the opportunity on the quote for this document, allowing the Opportunity Quote Documents Related List to reside on the Opportunity as well as the Quote.</description>
    <inlineHelpText>Choose the Opportunity that parents the Quote for this document.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Quote Documents</relationshipLabel>
    <relationshipName>R00N700000029COgEAM</relationshipName>
    <type>Lookup</type>
</CustomField>