Salesforce CPQ/main/default/objects/QuoteDocument__c/fields/PaperSize__c.field-meta.xml
<CustomField>
    <fullName>PaperSize__c</fullName>
    <description>Paper size of this document.</description>
    <inlineHelpText>Choose the paper size for this document.</inlineHelpText>
    <label>Paper Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PaperSize</valueSetName>
    </valueSet>
</CustomField>