Salesforce CPQ/main/default/objects/QuoteDocument__c/fields/PrimaryContactId__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContactId__c</fullName>
    <description>ID of primary contact in the quote. Used in Email button to default the To field.</description>
    <formula>Quote__r.PrimaryContact__c</formula>
    <inlineHelpText>References the primary contact for the quote to be used on the Email button, which defaults the To field.</inlineHelpText>
    <label>Primary Contact Id</label>
    <type>Text</type>
</CustomField>