Salesforce CPQ/main/default/objects/QuoteDocument__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <description>Quote to which this Quote Document belongs.</description>
    <inlineHelpText>Quote to which this Quote Document belongs.</inlineHelpText>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Quote Documents</relationshipLabel>
    <relationshipName>R00N70000001lX7YEAU</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>