Salesforce CPQ/main/default/objects/QuoteDocument__c/fields/QuoteTemplate__c.field-meta.xml
<CustomField>
    <fullName>QuoteTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Quote Template that generated this document.</description>
    <inlineHelpText>Quote Template that generated this document.</inlineHelpText>
    <label>Quote Template</label>
    <referenceTo>QuoteTemplate__c</referenceTo>
    <relationshipLabel>Quote Documents</relationshipLabel>
    <relationshipName>Quote_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>