Salesforce CPQ/main/default/objects/QuoteDocument__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <description>Name of the template used to generate this document.</description>
    <inlineHelpText>Name of the template used to generate this document.</inlineHelpText>
    <label>Template</label>
    <length>80</length>
    <type>Text</type>
</CustomField>