Salesforce CPQ/main/default/objects/QuoteDocument__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Sequentially incremented version number.</description>
    <inlineHelpText>Sequentially incremented version number.</inlineHelpText>
    <label>Version</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>