Salesforce CPQ/main/default/objects/QuoteDocument__c/fields/ViewRecordId__c.field-meta.xml
<CustomField>
    <fullName>ViewRecordId__c</fullName>
    <description>Allows user to view the Quote Document Record Id.</description>
    <formula>IF(ISBLANK(AttachmentId__c),DocumentId__c,AttachmentId__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Allows user to view the Quote Document Record Id.</inlineHelpText>
    <label>View Record Id</label>
    <type>Text</type>
</CustomField>